# speech

./: .gitignore  README.md  pyproject.toml
speech-recognition/: README.md  main.py  preprocess.py  test.m4a
speech-synthesis/: README.md  app.py  local_requirements.txt  pyproject.toml  replit.md  setup_local.md  test_cartesia.py
speech-synthesis/config/: model_config.yaml
speech-synthesis/evaluation/: metrics.py
speech-synthesis/external_apis/: README.md  __init__.py  cartesia_test.py  tts_api_client.py
speech-synthesis/models/: tacotron.py  vocoder.py
speech-synthesis/notebooks/: experiment.ipynb
speech-synthesis/preprocessing/: audio_processor.py  text_processor.py
speech-synthesis/synthesis/: synthesizer.py
speech-synthesis/training/: dataset.py  trainer.py
speech-synthesis/utils/: audio_utils.py  config.py  logger.py  visualization.py
